--- a/ListViewAsGrid/ListViewAsGrid/myItemTemplate.xaml
+++ b/ListViewAsGrid/ListViewAsGrid/myItemTemplate.xaml
@@ -2,16 +2,16 @@
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ListViewAsGrid.myItemTemplate">
-  <ContentView.Content>
+    <ContentView.Content>
         <Frame OutlineColor="Silver" CornerRadius="1">
-      <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="5*"/>
-                <RowDefinition Height="5*"/>
-            </Grid.RowDefinitions>
-          <Label  Grid.Row="0" Text="{Binding ID}" />
-          <Label  Grid.Row="1" Text="{Binding En}" />
-      </Grid>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="5*"/>
+                    <RowDefinition Height="5*"/>
+                </Grid.RowDefinitions>
+                <Label  Grid.Row="0" Text="{Binding ID}" />
+                <Label  Grid.Row="1" Text="{Binding Name}" />
+            </Grid>
         </Frame>
-  </ContentView.Content>
+    </ContentView.Content>
 </ContentView>
