--- a/ListViewAsGrid/ListViewAsGrid/myItemTemplate.xaml
+++ b/ListViewAsGrid/ListViewAsGrid/myItemTemplate.xaml
@@ -9,7 +9,7 @@
                     <RowDefinition Height="5*"/>
                     <RowDefinition Height="5*"/>
                 </Grid.RowDefinitions>
-                <Label  Grid.Row="0" Text="{Binding ID}" />
+                <Label BackgroundColor="Azure"  Grid.Row="0" Text="{Binding ID}" />
                 <Label  Grid.Row="1" Text="{Binding Name}" />
             </Grid>
         </Frame>
